Add simple idented tree visualization

--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -8,6 +8,7 @@
     <link href="/stylesheets/selector.css" rel="stylesheet" />
     <link rel="stylesheet" href="/javascripts/sunburst-chart/sunburst.css" />
     <link rel="stylesheet" href="/javascripts/icicle-chart/icicle.css" />
+    <link rel="stylesheet" href="/javascripts/indentedTreeView/indentedTree.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="/stylesheets/maindash.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -32,6 +33,7 @@
     <script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
     <script src="/javascripts/sunburst-chart/sunburst-chart.js"></script>
     <script src="/javascripts/icicle-chart/icicle-chart.js"></script>
+    <script src="/javascripts/indentedTreeView/indentedTree.js"></script>
 </head>
 
 <body>
@@ -274,7 +276,7 @@
     <div id="context-holder" class="main_body right top">
         <div id="chart" class="sunburst"></div>
         <label id="treeContext" class="treeContext"></label>
-        <div id="observablehq-chart-9c71e317"></div>
+        <div id="indentedTree" class="treeContainer"></div>
     </div>
 
     <!-- -->
