--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/javascripts/indentedTreeView/indentedTree.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="/stylesheets/maindash.css" />
+    <script src="https://kit.fontawesome.com/c25a5a0cde.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
