--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,6 +89,8 @@ td {
 
 tr:hover {
     background-color: #f5f5f5;
+    color: rgb(56, 56, 56);
+    text-shadow: none;
 }
 
 
@@ -404,12 +406,14 @@ input:checked+.slider_switch:before {
     width: 80%;
     height: 90%;
     z-index: 2;
+    overflow: hidden;
 }
 
 .sunburst {
     position: absolute;
     left: 20%;
     top: 10px;
+    z-index: 2;
 }
 
 .treeContext {
@@ -481,8 +485,70 @@ input:checked+.slider_switch:before {
 }
 
 .treeContainer {
-    height: 500px;
+    height: 100%;
     width: 100%;
     overflow: auto;
     background-color: white;
+    position: fixed;
+    top: var(--top-margin);
+}
+
+.change-details {
+    bottom: 0px;
+    height: calc(100% - 500px);
+    top: 500px;
+    position: fixed;
+    background: #393B40;
+    text-shadow: 2px 2px 4px black;
+}
+
+.general-title {
+    width: 100%;
+    height: 10%;
+    font-weight: bold;
+    text-align: center;
+}
+
+.tree-titles {
+    width: 100%;
+    height: 10%;
+    font-weight: bold;
+    padding-top: 10px;
+}
+
+.column,
+#tree2-title,
+#tree1-title {
+    width: 50%;
+    float: left;
+    font-size: small;
+    color: antiquewhite;
+}
+
+.old-tax {
+    width: 50%;
+    height: 80%;
+    float: left;
+    overflow: auto;
+}
+
+.new-tax {
+    width: 50%;
+    height: 80%;
+    float: left;
+    overflow: auto;
+}
+
+.change-details table {
+    border-top: 4px dotted white;
+}
+
+.change-details table,
+.change-details th,
+.change-details td {
+    font-size: 12px;
+    line-height: inherit;
+    white-space: nowrap;
+    color: black border 1px solid black;
+    border-collapse: collapse;
 }
