--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -552,3 +552,17 @@ input:checked+.slider_switch:before {
     color: black border 1px solid black;
     border-collapse: collapse;
 }
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: lightgray;
+    opacity: 0.6;
+}
+
+.center-loader {
+    top: 50%;
+    left: 50%;
+}
