--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -40,7 +40,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a href="#">
+        <a href="./">
             <div class="align-items-center no-gutters row">
                 <div class="col">
                     <img height="30px" src="assets/DiaforaIcon.png" />
