--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,81 +1,108 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title><%= title %></title>
-        <link rel="stylesheet" href="/stylesheets/styleDownloader.css" />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-            crossorigin="anonymous"
-        />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="/javascripts/xmlToJSON.js"></script>
-        <script src="/javascripts/hierachyThreeDownloader.js"></script>
-        <script src="/javascripts/handleQueryIndex.js"></script>
-    </head>
-    <body>
-        <button class="interfaceButton vis_button" onclick="onExit()">
-            Volver
-        </button>
+<html lang="es">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="icon" type="image/vnd.microsoft.icon" href="assets/favicon.ico" sizes="16x16" />
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
+    <script src="/lib/jquery.min.js"></script>
+    <script src="/lib/bootstrap.bundle.js"></script>
+    <script src="/javascripts/globalconf.js"></script>
+    <link rel="stylesheet" href="/stylesheets/styleDownloader.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/javascripts/xmlToJSON.js"></script>
+    <script src="/javascripts/hierachyThreeDownloader.js"></script>
+    <script src="/javascripts/handleQueryIndex.js"></script>
+    <link href="/stylesheets/selector.css" rel="stylesheet" />
+    <meta http-equiv="Access-Control-Allow-Origin" content="*" />
+    <title>Diaforá Taxonomy Viewer</title>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a href="/">
+            <div class="align-items-center no-gutters row">
+                <div class="col">
+                    <img height="30px" src="assets/DiaforaIcon.png" />
+                </div>
+                <div class="col">
+                    <span class="mb-0 h1 ml-2 navbar-brand">Diaforá</span>
+                </div>
+            </div>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+        <div class="collapse navbar-collapse" id="navbarColor02">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container-fluid">
         <div class="header">
             <h1 class="textTittle">
-                Taxonomy Downloader
+                Catalogye of Life - Taxonomy Downloader
             </h1>
 
             <table class="centeredTable">
                 <tr>
                     <td class="spacedTableRow">
-                        <label class="downloaderInputLabel" for="yearL"
-                            >Year</label
-                        >
-                    </td>
-                    <td class="spacedTableRow">
-                        <input
-                            class="downloaderInput"
-                            type="number"
-                            id="year"
-                            name="year"
-                            title="The year of of the taxonomy consulted"
-                            placeholder="Year"
-                        />
-                    </td>
-                </tr>
-                <tr>
-                    <td class="spacedTableRow">
-                        <label class="downloaderInputLabel" for="taxonL"
-                            >Target Taxon</label
-                        >
-                    </td>
-                    <td class="spacedTableRow">
-                        <input
-                            class="downloaderInput"
-                            type="text"
-                            id="name"
-                            name="taxon"
-                            title="The name of the taxon consulted"
-                            placeholder="Taxon name"
-                        />
-                    </td>
-                </tr>
-            </table>
+                        <label class="downloaderInputLabel" for="yearL">Year</label
+                            >
+                        </td>
+                        <td class="spacedTableRow">
+                            <input
+                                class="downloaderInput"
+                                type="number"
+                                id="year"
+                                name="year"
+                                title="The year of of the taxonomy consulted"
+                                placeholder="Year"
+                            />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="spacedTableRow">
+                            <label class="downloaderInputLabel" for="taxonL"
+                                >Target Taxon</label
+                            >
+                        </td>
+                        <td class="spacedTableRow">
+                            <input
+                                class="downloaderInput"
+                                type="text"
+                                id="name"
+                                name="taxon"
+                                title="The name of the taxon consulted"
+                                placeholder="Taxon name"
+                            />
+                        </td>
+                    </tr>
+                </table>
 
-            <button
-                type="button"
-                id="searchButton"
-                class="interfaceButton search_button"
-            >
-                Buscar
-            </button>
-            <div id="resultadoName">
-                <p id="notify"></p>
+                <button
+                    type="button"
+                    id="searchButton"
+                    class="interfaceButton search_button"
+                >
+                    Download
+                </button>
+                <div id="resultadoName">
+                    <p id="notify"></p>
+                </div>
+                <div id="resultadoId"></div>
             </div>
-            <div id="resultadoId"></div>
         </div>
-        <p class="footerText">
-            This webside downloads taxonomies from CATALOGUE OF LIFE
-            (www.catalogueoflife.org) in json format, also you can download
-            images from ENCYCOPEDIA OF LIFE if you want.
-        </p>
     </body>
 </html>
