--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
     <div class="container-fluid">
         <div class="header">
             <h1 class="textTittle">
-                Catalogye of Life - Taxonomy Downloader
+                Catalogue of Life - Taxonomy Downloader
             </h1>
 
             <table class="centeredTable">
