Load using query params

--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -37,7 +37,9 @@
     <script src="/javascripts/icicle-chart/icicle-chart.js"></script>
     <script src="/javascripts/indentedTreeView/indentedTree.js"></script>
 </head>
-<script></script>
+<script>
+    var protoType = <%= query.protoType? query.protoType : 0 %>;
+</script>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
