Fix duplicated items in tree

--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/javascripts/lib/bootstrap-icons.css" />
     <script src="/lib/jquery.min.js"></script>
     <script src="/lib/bootstrap.bundle.js"></script>
+    <script src="/lib/string-similarity.min.js"></script>
     <script src="/javascripts/globalconf.js"></script>
     <script src="/javascripts/drawMenu.js"></script>
     <script src="/javascripts/generic.js"></script>
